# das

./: .buildinfo  .gitignore  LICENSE  README.md  _pyproject.toml  annotate.html  api.html  azure-pipelines.yml  build_env.yml  condarc.yml  content.html  genindex.html  index.html  index_new.html  install.html  installation.html  intro.html  markdown.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  quickstart_bird.html  quickstart_fly.html  search.html  searchindex.js  setup.py  technical.html  train.html  unsupervised_birds.html
.github/workflows/: docs.yml  main.yml  publish.yml  publish_test.yml  publish_to_pypi.yml  test.yml
_modules/: index.html
_modules/das/: annot.html  augmentation.html  block_stratify.html  cli.html  data.html  data_hash.html  evaluate.html  event_utils.html  io.html  loss.html  make_dataset.html  models.html  models_legacy.html  neptune.html  npy_dir.html  postprocessing.html  predict.html  predict_oom.html  pulse_utils.html  segment_utils.html  spec_utils.html  tracking.html  train.html  train_transfer.html  train_tune.html  utils.html  utils_plot.html
_sources/: api.rst.txt  birds.ipynb  cli.ipynb  index.rst.txt  installation.md.txt  intro.md.txt  mice.ipynb  quickstart.md.txt  quickstart_bird.md.txt  quickstart_fly.md.txt  technical.md  unsupervised.md  unsupervised_mice.ipynb
_sources/api/: das.io.rst.txt  das.kapre.augmentation.rst.txt  das.loss.rst.txt  das.make_dataset.rst.txt  das.menagerie.rst.txt  das.models.rst.txt  das.models_legacy.rst.txt  das.morpholayers.constraints.rst.txt  das.morpholayers.initializers.rst.txt  das.npy_dir.rst.txt  das.postprocessing.rst.txt  das.predict.rst.txt  das.pulse_utils.rst.txt  das.spec_utils.rst.txt  das.tcn.tcn_new.rst.txt  das.tracking.rst.txt  das.train.rst.txt  das.utils_plot.rst.txt
_sources/technical/: cli.ipynb.txt  data_formats.md.txt  technical.rst.txt
_sources/tracking/: fixing_identities.md.txt
_sources/tutorials/: annotatefolder.ipynb.txt  architecture_tuning.md.txt  colab.ipynb.txt  continue_training.ipynb.txt  convert.md.txt  evaluate_bird.ipynb.txt  evaluate_fly.ipynb.txt  experiment_tracking.md.txt  inspect_dataset.ipynb.txt  label_segments.md.txt  make_ds_notebook.ipynb.txt  predict.ipynb.txt  realtime.ipynb.txt  (+4 more)
api/: das.annot.html  das.augmentation.html  das.block_stratify.html  das.cli.html  das.data.html  das.data_hash.html  das.evaluate.html  das.event_utils.html  das.io.html  das.kapre.augmentation.html  das.kapre.backend.html  das.kapre.backend_keras.html  das.kapre.filterbank.html  das.kapre.time_frequency.html  das.kapre.utils.html  das.loss.html  das.make_dataset.html  das.menagerie.html  das.models.html  das.models_legacy.html  das.morpholayers.constraints.html  das.morpholayers.initializers.html  das.morpholayers.layers.html  das.morpholayers.regularizers.html  das.neptune.html  das.npy_dir.html  das.postprocessing.html  das.predict.html  das.predict_oom.html  das.pulse_utils.html  das.segment_utils.html  das.spec_utils.html  das.tcn.tcn.html  das.tcn.tcn_new.html  das.tracking.html  das.train.html  das.train_transfer.html  das.train_tune.html  das.utils.html  das.utils_plot.html
colab/: colab.ipynb
conda/: Dockerfile  README.md  build_env.yml  condarc.yml
docs/: CONTRIBUTING.md  LICENSE  Makefile  README.md  api.rst  conf.py  index.rst  installation.md  make_api_doctree.py  quickstart_bird.md  quickstart_fly.md
env/: das-env.yml  das-nogui-env.yml  das-nogui-osxarm-env.yml  das_gui.yml  das_linux.yaml  das_mac.yaml  das_plain.yml  das_win.yaml  deepss_gui.yml  deepss_plain.yml  upload.sh
technical/: cli.html  data_formats.html  installation_apple-arm.html  technical.html
tests/: test_augmentation.py  test_cli.py  test_import.py  test_train.py
tracking/: fixing_identities.html
tutorials/: 1_prepare_data.ipynb  2_training.ipynb  3a_evaluate_events.ipynb  3b_evaluate_segments.ipynb  4_inference.ipynb  annotatefolder.html  architecture_tuning.html  colab.html  continue_training.html  convert.html  evaluate_bird.html  evaluate_fly.html  experiment_tracking.html  inspect_dataset.html  label_segments.html  make_ds_notebook.html  predict.html  realtime.html  structparams.html  train.html  tuning.html  tutorials.html
tutorials_gui/: annotate.html  load.html  predict.html  train.html  tutorials_gui.html
unsupervised/: birds.html  flies.html  mice.html  unsupervised.html
(+249 files in other folders)
